KNOW-2559: Mobile SDK - bad link to API doc.

--- a/content_submission.html
+++ b/content_submission.html
@@ -742,7 +742,7 @@ feedback.action = BVSubmissionActionPreview;
 
 <h2>Generic Form Field Options</h2>
 
-<p>All available fields are detailed in <code>BVReviewSubmission.h</code> and further in <a href="https://developer.bazaarvoice.com/apis/conversations/">Bazaarvoice's API Documentation</a>. Required fields, and specific rules per field (<font color="#666"><i>"reviewText must be longer than X characters"</i></font>) is dependent on your specific deployment setup.</p>
+<p>All available fields are detailed in <code>BVReviewSubmission.h</code> and further in <a href="https://developer.bazaarvoice.com/conversations-api">Bazaarvoice's API Documentation</a>. Required fields, and specific rules per field (<font color="#666"><i>"reviewText must be longer than X characters"</i></font>) is dependent on your specific deployment setup.</p>
 
 <br/>
 
