MOB-830: Update doc's to point to new doc's.

--- a/content_display.html
+++ b/content_display.html
@@ -344,7 +344,10 @@ function scrollAndClickById(id) {
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                <script type="text/javascript">
+                <p class="bg-danger well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i> This documentation is currently deprecated and will be removed soon. <a class="bg-danger" href="https://developer.bazaarvoice.com/mobile-sdks">Here is the new location of the updated documentation</a></p>
+
+
+<script type="text/javascript">
 
     // when doc loads, see if we have an anchored link
     // it might be in a tab, which we need to programatically open
@@ -389,7 +392,8 @@ function scrollAndClickById(id) {
   <li><a href="#authordisplay" onclick="scrollAndClickById('authordisplay_li');">Profile (Author) Display</a></li>
 </ol>
 
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Important: You will need your <strong>apiKeyConversations</strong> to implement and use Conversations with Mobile SDKs.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  <a class="bg-info"></a> Important: You will need your <strong>apiKeyConversations</strong> to implement and use Conversations with Mobile SDKs.</p>
+
 
 </p>
 The completed project for this code walkthrough for Swift and Objective-C is in the SDK path <code>/Examples/Conversations</code>. For a more comprehensive demonstration of the Conversations SDK, please also see the BVSDKDemo project under <code>/Examples/BVSDKDemo</code>.
@@ -1211,7 +1215,8 @@ class DemoQuestionTableViewCell: BVQuestionTableViewCell {
 
 	<li>
 		<p>Finally, inside <strong>DemoQuestionViewController</strong>, use a <code>BVQuestionsAndAnswersRequest</code> object to load 10 questions and their associated answers. Use instances of <strong>DemoQuestionTableViewCell</strong> to display:</p>
-		<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Note: answers are not displayed in this tutorial but should be displayed alongside questions.</p>
+		<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  <a class="bg-info"></a> Note: answers are not displayed in this tutorial but should be displayed alongside questions.</p>
+
 
 		<ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="pull-right"><a style="padding-top:4px; padding-bottom:4px;" href="#objc" aria-controls="objc" role="tab" data-toggle="tab">Objective-C</a></li>
