--- a/index.html
+++ b/index.html
@@ -344,7 +344,10 @@ function scrollAndClickById(id) {
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                <div class="flex flex-row" id="content_title">
+                <p class="bg-danger well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i> This documentation is currently deprecated and will be removed soon. <a class="bg-danger" href="https://developer.bazaarvoice.com/mobile-sdks">Here is the new location of the updated documentation</a></p>
+
+
+<div class="flex flex-row" id="content_title">
   Bazaarvoice Mobile SDK for iOS
 </div>
 <p>The Bazaarvoice Mobile SDK (BVSDK) provides access to most of the core products Bazaarvoice offers. The SDK is built with modularity in mind with a common core and analytics package that can be installed stand-alone. From there, you can add on whichever products and services you'd like. Use the guides and references on this site to install, integrate, and effectively use the Bazaarvoice Mobile SDK for iOS with Bazaarvoice products, such as Conversations, Curations, etc.</p>
