--- a/analytics_and_location.html
+++ b/analytics_and_location.html
@@ -344,7 +344,10 @@ function scrollAndClickById(id) {
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                <script type="text/javascript">
+                <p class="bg-danger well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i> This documentation is currently deprecated and will be removed soon. <a class="bg-danger" href="https://developer.bazaarvoice.com/mobile-sdks">Here is the new location of the updated documentation</a></p>
+
+
+<script type="text/javascript">
 
     // when doc loads, see if we have an anchored link
     // it might be in a tab, which we need to programatically open
