--- a/content_submission.html
+++ b/content_submission.html
@@ -344,7 +344,10 @@ function scrollAndClickById(id) {
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                <script type="text/javascript">
+                <p class="bg-danger well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i> This documentation is currently deprecated and will be removed soon. <a class="bg-danger" href="https://developer.bazaarvoice.com/mobile-sdks">Here is the new location of the updated documentation</a></p>
+
+
+<script type="text/javascript">
 
     // when doc loads, see if we have an anchored link
     // it might be in a tab, which we need to programatically open
@@ -380,7 +383,8 @@ function scrollAndClickById(id) {
 
 <p>The BVSDK makes it easy to upload Consumer Generated Content (Reviews, Questions, Answers) to the Bazaarvoice platform. The <a href="https://developer.bazaarvoice.com/conversations-api">full API documentation</a> details what each field represents which is not covered here. Contact Bazaarvoice to set up Conversations if you haven't done so already.</p>
 
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Important: You will need your <strong>apiKeyConversations</strong> to implement and use Conversations with Mobile SDKs.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  <a class="bg-info"></a> Important: You will need your <strong>apiKeyConversations</strong> to implement and use Conversations with Mobile SDKs.</p>
+
 
 </p>
 The completed project for this code walkthrough for Swift and Objective-C is in the SDK path <code>/Examples/Conversations</code>. For a more comprehensive demonstration of the Conversations SDK, please also see the BVSDKDemo project under <code>/Examples/BVSDKDemo</code>.
@@ -695,7 +699,8 @@ submission.agreedToTermsAndConditions = [NSNumber numberWithBool:YES];
 <p>Submitting a feedback is the simplest of content submissions. Create an instance of <code>BVFeedbackSubmission</code>, fill out the required parameters, and submit it! You can use the Feedback submission for either Helpfulness votes or for flagging inappropriate content, just set the type with the <code>BVFeedbackType</code> enumerator. </p>
 <p>Note that a <code>BVFeedbackSubmission</code> object requires a <code>contentId</code> which will correspond to the identifer of the Review, Question, or Answer your client is providing feedback on.</p>
 
-<p class="bg-warning well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>   Important: You cannot submit feedback for syndicated content. Make sure to check the <code>IsSyndicated</code> flag before you display your feedback UI. </p>
+<p class="bg-warning well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  <a class="bg-warning"></a>  Important: You cannot submit feedback for syndicated content. Make sure to check the <code>IsSyndicated</code> flag before you display your feedback UI. </p>
+
 
 <ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="active"><a href="#swift" aria-controls="swift" role="tab" data-toggle="tab">Swift</a></li>
