--- a/example_projects.html
+++ b/example_projects.html
@@ -344,7 +344,10 @@ function scrollAndClickById(id) {
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                The Bazaarvoice SDK for iOS comes with Example projects in both Swift and Objective-C for each component in the SDK.
+                <p class="bg-danger well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i> This documentation is currently deprecated and will be removed soon. <a class="bg-danger" href="https://developer.bazaarvoice.com/mobile-sdks">Here is the new location of the updated documentation</a></p>
+
+
+The Bazaarvoice SDK for iOS comes with Example projects in both Swift and Objective-C for each component in the SDK.
 The Examples are written in such a way that you can easily drop in your own <a
 		href="./installation.html">configurations files</a> and quickly get familiar with the APIs and data. There is
 also a full kitchen-sink style BVSDKDemo app that contains all the SDK functionality in a mock eCommerce mobile app. The
@@ -371,7 +374,8 @@ files. This will download <strong>bvsdk_config_prod.json</strong> and/or <strong
 </ul>
 
 <p>
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  NOTE: The Swift and BVSDKDemo examples require XCode 8.0+ or greater. All Swift examples are written and tested against the Swift 3.0 compiler.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  <a class="bg-info"></a> NOTE: The Swift and BVSDKDemo examples require XCode 8.0+ or greater. All Swift examples are written and tested against the Swift 3.0 compiler.</p>
+
 
 <a name="basicexamples"></a>
 <div class="flex flex-row" id="content_title">
@@ -411,7 +415,8 @@ The full BVSDK project works out-of-the box under the <code>/Examples/BVSDKDemo<
 The demonstration shows the major components of the SDK from Product Recommendations, Curations REST API, and Custom Photo Upload. The Conversations examples demonstrate how read Conversation statistics, fetch reviews and questions as well as demonstrations on how to construct forms for uploading UGC content such as Rating & Reviews, Questions, and Feedback.
 </br></br>
 
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Note: The BVSDKDemo uses App Groups capabilities and an Extension. Becuase of this you won't be able to run this app on your device unless you remove the Curations Custom Post Extension or add the proper permission to your own App ID in your own Apple Developer Account.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  <a class="bg-info"></a> Note: The BVSDKDemo uses App Groups capabilities and an Extension. Becuase of this you won't be able to run this app on your device unless you remove the Curations Custom Post Extension or add the proper permission to your own App ID in your own Apple Developer Account.</p>
+
 
 </br>
 
