--- a/ios_9_considerations.html
+++ b/ios_9_considerations.html
@@ -344,7 +344,10 @@ function scrollAndClickById(id) {
             <div class="scroll-container scrollable--scrollbar">
               <div class="page-container">
 
-                <div class="flex flex-row" id="content_title">
+                <p class="bg-danger well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i> This documentation is currently deprecated and will be removed soon. <a class="bg-danger" href="https://developer.bazaarvoice.com/mobile-sdks">Here is the new location of the updated documentation</a></p>
+
+
+<div class="flex flex-row" id="content_title">
 	iOS 9 Considerations
 </div>
 <hr>
@@ -361,6 +364,7 @@ function scrollAndClickById(id) {
 <br>
 <p>Note: Use the above sample only for initial testing and development. For your production application, you should include a whitelisted set of domains under the <code>NSExceptionDomains</code> key.</p>
 <br>
+
 
 
 <div class="well well-sm">
